[package]
name = "firmware"
version = "0.1.0"
authors = ["luksab <lukas@sabatschus.de>"]
edition = "2021"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
# debug = true # 60 bytes saved
lto = true
opt-level = "z"

[dependencies]
avrd = "1.0.0"
atmega32u4-usb-hid = { path = "./atmega32u4-usb-hid" }
embedded-hal = "0.2.7"
ufmt = "0.1"
smart-leds = "0.3"

postcard = "0.7.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dependencies.avr-device]
version = "0.3.2"
features = ["atmega32u4"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["sparkfun-promicro"]

[[bin]]
name = "firmware"
test = false
bench = false
